--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home Page</title>
+    <title>CVR Home Page</title>
     <link href="CSS/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="CSS/bootstrap.min.css">
 </head>
