--- a/aboutus.html
+++ b/aboutus.html
@@ -150,6 +150,84 @@ To nurture students towards holistic development with human values and ethics.
         </div>
 
     </div>
+    <i class="fa fa-circle-o-notch fa-spin fa-lg" style="font-size:50px; display: inline-block;"></i>
+    <div class="container" id="table" style="display: none;">
+        <div class="row">
+            <div class="col-8 offset-2">
+                <table class="table table-striped">
+                    <thead class="bg-secondary">
+                      <tr class="text-white">
+                        <th scope="col">#</th>
+                        <th scope="col" colspan="2" class="text-center">Governing Body</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row">1</th>
+                        <td>Dr. Raghava V Cherabuddi </td>
+                        <td> Chairman </td>
+                      </tr>
+                      <tr>
+                        <th scope="row">2</th>
+                        <td>Dr. C. Ramaiah </td>
+                        <td> Vice-Chairman </td>
+                      </tr>
+                      <tr>
+                        <th scope="row">3</th>
+                        <td>Smt. Sujana Cherabuddi </td>
+                        <td> Member </td>
+                      </tr>
+                      <tr>
+                        <th scope="row">4</th>
+                        <td>Prof. Pannalal (Former Professor and Registrar, Osmania University) </td>
+                        <td> Member </td>
+                      </tr>
+                      <tr>
+                        <th scope="row">5</th>
+                        <td>Dr. C. Madhusudana Reddy </td>
+                        <td>  Member </td>
+                      </tr>
+                      <tr>
+                        <th scope="row">6</th>
+                        <td>Dr. K. Chockalingam (Former Vice-Chancellor, M.S. University, Tamil Nadu) </td>
+                        <td> UGC Nominee </td>
+                      </tr>
+                      <tr>
+                        <th scope="row">7</th>
+                        <td>Dr. B.N. Bhandari </td>
+                        <td> JNTUH Nominee </td>
+                      </tr>
+                      <tr>
+                        <th scope="row">8</th>
+                        <td>Sri V. Rajanna (Vice-President and Regional Head, TCS, Hyderabad)</td>
+                        <td> Member (Industrialist)  </td>
+                      </tr>
+                    </tbody>
+                  </table>
+            </div>
+        </div>
+    </div>
+
+    <hr/>
+    <!-- ********************************************************************************************************************* -->
+
+    <div class="jumbotron bg-dark text-white" style="clear:both;">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 align-self-center">
+                    <p class=" text-center h5">
+                        &copy; copyrights 2020 CVR College of Engineering
+                    </p>
+                </div>
+                <div class="col-sm-6">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3811.460853988679!2d78.59506221435072!3d17.196418412812296!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcba659868b4727%3A0xf39a771705e23170!2sCVR%20College%20Of%20Engineering!5e0!3m2!1sen!2sin!4v1592983064232!5m2!1sen!2sin"
+                        width="300" height="150" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                        tabindex="0"></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <script src="js/jquery-3.4.1.slim.min.js"></script>
     <script src="js/popper.min.js"></script>
